<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaiementAjoutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGold"
            android:textStyle="bold"
            android:text="@string/paiement"
            android:textSize="40dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultation_id"/>
        <EditText
            android:id="@+id/consultation_id_edit"
            android:textSize="18dp"
            android:gravity="center"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix"/>

        <EditText
            android:id="@+id/prix_paie_edit"
            android:gravity="center"
            android:textSize="18dp"
            android:inputType="number"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etat"/>

        <EditText
            android:id="@+id/etat_paie_edit"
            android:gravity="center"
            android:textSize="18dp"
            android:editable="false"
            android:focusable="false"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:textSize="18dp"
                android:background="@color/colorGray"
                android:id="@+id/annuler_paie_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_close_black_24dp"
                android:text="@string/annuler"/>
            <Button
                android:textSize="18dp"
                android:id="@+id/valider_paie_btn"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:text="@string/valider"/>

        </LinearLayout>
        <Button
            android:id="@+id/pay_nfc_btn"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:background="@color/colorBlue"
            android:textColor="@color/cardview_light_background"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_nfc_white_24dp"
            android:text="@string/paiement_nfc"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>