<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConsultationAjoutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGold"
            android:textStyle="bold"
            android:text="@string/consultation"
            android:textSize="40dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_id"/>
        <EditText
            android:id="@+id/patient_cons_edit"
            android:inputType="number"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"/>
        <EditText
            android:id="@+id/nom_cons_edit"
            android:inputType="text"
            android:editable="false"
            android:focusable="false"
            android:gravity="center"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix"/>
        <EditText
            android:id="@+id/prix_cons_edit"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/annuler_cons_btn"
                android:background="@color/colorGray"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_close_black_24dp"
                android:text="@string/annuler"/>
            <Button
                android:id="@+id/ajouter_cons_btn"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_add_white_24dp"
                android:text="@string/ajouter"/>

        </LinearLayout>

    </LinearLayout>
    
</android.support.design.widget.CoordinatorLayout>